--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <ul>
         <li>Email: <a href="mailto:prvzmusharaf@gmail.com">prvzmusharaf@gmail.com</a></li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/parvez-musharaf-36a795304?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Parvez Musharaf's LinkedIn Profile</a></li>
-        <li>GitHub: <a href="https://github.com/parvez-62/terraform.git" target="_blank">Parvez's GitHub Profile</a></li>
+        <li>GitHub: <a href="https://github.com/parvez-62/Terraform-S3-Automator.git" target="_blank">Parvez's GitHub Profile</a></li>
       </ul>
     </div>
   </main>
